--- a/POC_FE/package.json
+++ b/POC_FE/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "apexcharts": "^5.3.5",
+    "crypto-js": "^4.2.0",
     "react": "^19.1.1",
     "react-apexcharts": "^1.8.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
