--- a/POC_FE/.env
+++ b/POC_FE/.env
@@ -1,2 +1,2 @@
-URL:	"http://127.0.0.1:8000/"
-encryption decreption key = "1mMt2djl3rPbe15aYg2UxnRyaZokPAQy"
+VITE_SECRET_KEY_ENC=1mMt2djl3rPbe15aYg2UxnRyaZokPAQy
+VITE_API_BASE_URL=http://localhost:8000
